--- a/bower.json
+++ b/bower.json
@@ -7,6 +7,7 @@
   ],
   "dependencies": {
     "angular": "~1.4.1",
-    "bootstrap": "~3.3.5"
+    "bootstrap": "~3.3.5",
+    "fastclick": "~1.0.6"
   }
 }
